--- a/Componente-de-visualizacao-de-Artigo/CSS/style.css
+++ b/Componente-de-visualizacao-de-Artigo/CSS/style.css
@@ -41,6 +41,7 @@ div.img img {
 }
 
 div.grid-container {
+    position: relative;
     display: grid;
     grid-template-columns: 50% 30% 20%;
     grid-template-rows: 35% 32% 32%;
@@ -125,7 +126,6 @@ div.content2 img {
 /* SHARE */
 
 div.content3 {
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -136,7 +136,7 @@ div.content3 {
     border-radius: 20px;
 }
 
-div.content3 img {
+.content3 img {
     width: 20px;
     height: 20px;
     cursor: pointer;
@@ -144,7 +144,7 @@ div.content3 img {
 
 .PopOver {
     display: none;
-    width: 210px;
+    width: 200px;
     position: absolute;
     bottom: 90px;
     background: hsl(217, 19%, 35%);
@@ -158,11 +158,11 @@ div.content3 img {
 }
 
 .PopOver_Content {
-    padding: 9px 14px;
+    padding: 9px 7px;
 }
 
 .PopOver_Content span {
-    padding-right: 15px;
+    padding: 0 10px;
     color: white;
     font-size: smaller;
 }
@@ -204,6 +204,9 @@ div.content3 img {
     display: block;
 }
 
+
+/* RESPONSIVO */
+
 @media screen and (max-width: 768px) {
     section {
         width: 70vw;
@@ -227,8 +230,23 @@ div.content3 img {
     div.content2 {
         margin: 20px 0;
     }
-    div.content3 img {
+    .content3 img {
         margin-bottom: -30px;
+    }
+    .PopOver {
+        display: none;
+        width: 200px;
+        bottom: 40px;
+    }
+    .PopOver_Content span {
+        padding: 0 10px;
+    }
+    .PopOver_Content img {
+        margin: 0;
+        margin-right: 5px;
+    }
+    .show {
+        display: block;
     }
 }
 
@@ -236,10 +254,57 @@ div.content3 img {
 /* *************** */
 
 
-/* teste */
-
-
 /* ************** */
+
+@media screen and (max-width: 500px) {
+    .content3>img {
+        margin-top: 10px;
+        margin-left: 30px;
+        z-index: 2;
+    }
+    .PopOver {
+        display: none;
+        width: 100%;
+        height: 25%;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: 1;
+        border: 0;
+        border-radius: 0;
+        -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    }
+    .arrow_Down:after {
+        left: 0;
+        top: 0;
+        border-top-color: hsl(217, 19%, 35%);
+        margin-left: 0;
+    }
+    .arrow_Down:before {
+        left: 0;
+        top: 0;
+        border-top-color: hsl(217, 19%, 35%);
+        margin-left: 0;
+    }
+    .PopOver_Content span {
+        padding: 0 10px;
+        color: white;
+        font-size: normal;
+    }
+    .espaco-share {
+        margin-top: 20px;
+    }
+    .espaco-imgs>a {
+        padding-left: 10px
+    }
+    .show {
+        display: flex;
+    }
+}
+
+
+/* *********** */
 
 @media screen and (max-width: 450px) {
     section {
@@ -265,13 +330,38 @@ div.content3 img {
     div.content2 {
         margin: 20px 0;
     }
-    div.content3 img {
+    .content3>img {
+        margin-top: 30px;
+        margin-left: 30px;
+        z-index: 2;
+    }
+    .content3 img {
         margin-bottom: -30px;
         margin-left: 30px;
     }
+    .PopOver {
+        display: none;
+        width: 100%;
+        height: 30%;
+    }
+    .PopOver_Content img {
+        margin: 0 5px 0 0;
+    }
+    .espaco-share {
+        margin-top: 30px;
+    }
+    .espaco-imgs>a {
+        padding-left: 10px
+    }
+    .show {
+        display: block;
+    }
 }
 
-@media screen and (max-width: 360px) {
+
+/* ************** */
+
+@media screen and (max-width: 350px) {
     section {
         max-width: 80vw;
         width: 500px;
@@ -296,8 +386,17 @@ div.content3 img {
         width: 100%;
         margin: 20px 0;
     }
-    div.content3 img {
-        margin-bottom: -30px;
+    .content3>img {
+        margin-top: 30px;
         margin-left: 40px;
+    }
+    .espaco-share {
+        margin-top: 40px;
+    }
+    .espaco-imgs>a {
+        padding-left: 5px
+    }
+    .show {
+        display: block;
     }
 }
