--- a/Cadastro/style.css
+++ b/Cadastro/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .box {
-    width: 80%;
+    width: 50vw;
     height: 80%;
     background-color: rgb(190, 190, 190);
 }
@@ -44,10 +44,10 @@ body {
 }
 
 .area {
-    position: relative;
+    display: block;
     margin: 0 auto;
     width: 80%;
-    height: 350px;
+    height: 30%;
     /* background-color: blue; */
     text-align: center;
 }
@@ -74,7 +74,7 @@ body {
     margin: 10px auto 0 auto;
     display: block;
     width: 50%;
-    height: 200px;
+    height: 60%;
     text-align: left;
     border-bottom: 3px solid rgb(180, 180, 176);
     resize: none;
@@ -83,7 +83,15 @@ body {
 
 /* RESPONSIVO */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
+    .box {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(190, 190, 190);
+    }
+}
+
+@media screen and (max-width: 665px) {
     .box {
         width: 100%;
         height: 100%;
@@ -99,6 +107,9 @@ body {
         width: 100%;
         height: 100%;
         background-color: rgb(190, 190, 190);
+    }
+    .titulo {
+        font-size: 15px;
     }
     .area>button {
         margin: 10px auto 0 auto;
