--- a/Calculator-Tip/Style/style.css
+++ b/Calculator-Tip/Style/style.css
@@ -17,7 +17,7 @@ body {
 main {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(0, 158, 158);
+    background-color: hsl(185, 41%, 84%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@ main {
     bottom: 10px;
     width: 90px;
     word-wrap: break-word;
-    color: rgba(4, 194, 194, 0.74);
+    color: hsl(183, 100%, 15%);
 }
 
 
@@ -59,27 +59,39 @@ main {
     height: 94%;
     margin: 10px 2% 0 2%;
     border-radius: 15px;
-    background-color: rgb(150, 150, 150);
+    /* background-color: rgb(150, 150, 150); */
+    padding-left: 30px;
 }
 
 
 /* bill */
 
 .bill {
-    padding: 20px 5px;
+    padding: 20px 0;
     font-size: 20px;
+    position: relative;
 }
 
-.bill>p {
-    padding: 5px 0;
+.bill>label {
+    color: hsl(186, 14%, 43%);
+}
+
+.bill>img {
+    width: 20px;
+    /* border: 3px groove aquamarine; */
+    position: absolute;
+    top: 47%;
+    left: 3%;
 }
 
 .bill>input {
+    max-width: 30vw;
     width: 350px;
     height: 40px;
     padding-left: 5px;
     font-size: 15px;
     border: 3px groove aquamarine;
+    text-align: right;
 }
 
 .bill>input:focus {
@@ -97,25 +109,75 @@ main {
     flex-direction: column;
 }
 
+.botao>label {
+    color: hsl(186, 14%, 43%);
+}
+
 .botao>.b1,
 .botao>.b2 {
-    width: 50%;
+    width: 100%;
     padding-top: 15px;
     margin: 0 auto;
 }
 
 .botao button {
-    width: 25%;
+    max-width: 30vw;
+    width: 27%;
+    height: 50px;
     padding: 5px 0;
     cursor: pointer;
+    border: 3px groove aquamarine;
+    background-color: hsl(183, 100%, 15%);
+    color: white;
+    border-radius: 10px;
 }
 
 .botao>.b2>input {
-    width: 25%;
+    max-width: 30vw;
+    width: 27%;
+    height: 50px;
     padding: 5px 5px;
+    text-align: right;
+    border: 3px groove aquamarine;
+    border-radius: 10px;
 }
 
 .botao>.b2>input:focus {
+    outline: 0;
+}
+
+
+/* pessoas */
+
+.pessoa {
+    padding: 20px 0;
+    font-size: 20px;
+    position: relative;
+}
+
+.pessoa>label {
+    color: hsl(186, 14%, 43%);
+}
+
+.pessoa>img {
+    width: 20px;
+    position: absolute;
+    bottom: 27%;
+    left: 3%;
+}
+
+.pessoa>input {
+    max-width: 30vw;
+    width: 350px;
+    height: 40px;
+    padding-left: 5px;
+    font-size: 15px;
+    border: 3px groove aquamarine;
+    text-align: right;
+}
+
+.pessoa>input:focus {
+    /* para não aparecer as bordas ao focar na area */
     outline: 0;
 }
 
@@ -126,10 +188,14 @@ main {
 /* Area azul */
 
 .B-box {
-    position: inherit;
-    width: 50%;
+    width: 40%;
     height: 94%;
-    margin: 10px 2% 0 2%;
-    background-color: rgb(0, 132, 255);
+}
+
+.blue {
+    width: 100%;
+    height: 95%;
+    margin: 5% 8.5%;
+    background-color: hsl(183, 100%, 15%);
     border-radius: 15px;
 }
