--- a/Calculator-Tip/Style/style.css
+++ b/Calculator-Tip/Style/style.css
@@ -109,9 +109,10 @@ main {
     flex-direction: column;
 }
 
-.botao>label {
+
+/* .botao>label {
     color: hsl(186, 14%, 43%);
-}
+} */
 
 .botao>.b1,
 .botao>.b2 {
@@ -198,4 +199,65 @@ main {
     margin: 5% 8.5%;
     background-color: hsl(183, 100%, 15%);
     border-radius: 15px;
+}
+
+.tipAmount,
+.totalPerson {
+    display: flex;
+    width: 100%;
+    padding-top: 20px;
+    padding-left: 40px;
+    color: hsl(189, 41%, 97%);
+    font-weight: 700;
+}
+
+.tipAmount {
+    padding-top: 60px;
+}
+
+.tipAmount p,
+.totalPerson p {
+    font-size: 15px;
+    color: lightgray;
+}
+
+.totalPerson p::after,
+.tipAmount p::after {
+    color: hsl(184, 14%, 56%);
+    content: "/ person";
+}
+
+#tipCaunt,
+#totalCaunt {
+    padding-left: 30%;
+    font-size: 30px;
+    color: hsl(185, 60%, 76%);
+    font-weight: 700;
+}
+
+#tipCaunt::before,
+#totalCaunt::before {
+    content: '$';
+}
+
+#reset {
+    width: 100%;
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+#reset button {
+    width: 90%;
+    padding: 3% 0;
+    background-color: hsl(185, 60%, 76%);
+    border: 3px groove rgb(100, 202, 168);
+    color: hsl(183, 100%, 15%);
+    border-radius: 5px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+#reset button:focus {
+    outline: 0;
 }
