--- a/Calculator-Tip/Style/style.css
+++ b/Calculator-Tip/Style/style.css
@@ -41,8 +41,8 @@ main {
 .W-box {
     position: relative;
     bottom: 20px;
-    max-width: 95vw;
-    max-height: 85vh;
+    max-width: 90vw;
+    max-height: 85vw;
     width: 850px;
     height: 380px;
     background-color: white;
@@ -85,7 +85,7 @@ main {
 }
 
 .bill>input {
-    max-width: 45vw;
+    max-width: 36vw;
     width: 350px;
     height: 40px;
     padding-left: 5px;
@@ -115,13 +115,13 @@ main {
 
 .botao>.b1,
 .botao>.b2 {
+    /* max-width: 45vw; */
     width: 100%;
     padding-top: 15px;
     margin: 0 auto;
 }
 
 .botao button {
-    max-width: 30vw;
     width: 27%;
     height: 50px;
     padding: 5px 0;
@@ -133,7 +133,6 @@ main {
 }
 
 .botao>.b2>input {
-    max-width: 30vw;
     width: 27%;
     height: 50px;
     padding: 5px 5px;
@@ -167,7 +166,7 @@ main {
 }
 
 .pessoa>input {
-    max-width: 45vw;
+    max-width: 36vw;
     width: 350px;
     height: 40px;
     padding-left: 5px;
