--- a/Calculator-Tip/Style/style.css
+++ b/Calculator-Tip/Style/style.css
@@ -29,7 +29,7 @@ main {
 
 .split {
     position: relative;
-    bottom: 10px;
+    bottom: 1px;
     width: 90px;
     word-wrap: break-word;
     color: hsl(183, 100%, 15%);
@@ -68,7 +68,7 @@ main {
 /* bill */
 
 .bill {
-    padding: 20px 0;
+    padding: 15px 0;
     font-size: 20px;
     position: relative;
 }
@@ -154,6 +154,17 @@ main {
     font-size: 20px;
     position: relative;
 }
+.zero{
+    display:none;
+    color:red;
+    padding-left: 20px; 
+    font-size: smaller;
+}
+.one{ 
+    display:inline-block;
+    color:red;
+    padding-left: 20px; 
+    font-size: smaller;}
 
 .pessoa>label {
     color: hsl(186, 14%, 43%);
@@ -194,7 +205,7 @@ main {
 
 .blue {
     width: 100%;
-    height: 95%;
+    height: 100%;
     margin: 5% 8.5%;
     background-color: hsl(183, 100%, 15%);
     border-radius: 15px;
@@ -241,7 +252,7 @@ main {
 
 #reset {
     width: 100%;
-    margin-top: 80px;
+    margin-top: 20%;
     display: flex;
     justify-content: center;
 }
